update of readme + cluster configs